fix: mobile version

--- a/src/components/DataList/DataList.scss
+++ b/src/components/DataList/DataList.scss
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 90%;
+    width: 90vw;
     max-width: 560px;
     margin-top: 15px;
     padding-top: 30px;
