--- a/src/components/Transaction/Transaction.scss
+++ b/src/components/Transaction/Transaction.scss
@@ -1,5 +1,8 @@
 .transaction {
   &-title {
+    margin-bottom: 50px;
+    color: var(--dark-color);
+    font-size: var(--large-font-size);
     text-align: center;
   }
 
@@ -11,7 +14,7 @@
     background: url(../../images/arrow-back.svg);
     background-repeat: no-repeat;
     background-position: center;
-    background-size: 35px;
+    background-size: 25px;
     border: none;
     border-radius: 25px;
     outline: none;
@@ -50,13 +53,21 @@
   }
 
   &-field {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     height: 100%;
-    max-height: 135px;
+    max-height: 55px;
     margin-bottom: 20px;
-    padding: 0 25px 10px 25px;
+    padding: 0 25px;
     border: 1px solid var(--border-color);
     border-radius: 4px;
+
+    &.balance {
+      max-height: 150px;
+    }
 
     &-title {
       display: block;
@@ -82,6 +93,7 @@
     margin: 20px 0;
 
     & > p {
+      margin-bottom: 0;
       color: var(--dark-color);
     }
   }
@@ -152,6 +164,8 @@
 
     &-address {
       width: 100%;
+      max-height: 50px;
+      padding: 0;
       font-size: var(--md-font-size);
       white-space: nowrap;
       text-overflow: ellipsis;
@@ -170,6 +184,7 @@
       width: 100%;
       max-width: 500px;
       margin-top: 10px;
+      margin-top: 0;
       background-color: var(--transparent);
       /* stylelint-disable-next-line no-descending-specificity */
       & > span {
@@ -190,19 +205,99 @@
 }
 
 .all-balance {
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: space-between;
   width: 100%;
   max-width: 110px;
   padding: 0;
   color: var(--links-color);
-  font-size: var(--md-font-size);
+  font-size: var(--sm-font-size);
   background-color: var(--transparent);
   border: none;
   outline: none;
 
   & > span {
     font-size: var(--xl-font-size);
+  }
+}
+
+@media screen and (min-width: 760px) {
+  .currency {
+    &-input {
+      padding: 15px;
+
+      &-wrapper {
+        padding: 10px 0;
+      }
+    }
+  }
+
+  .all-balance {
+    display: flex;
+    font-size: var(--md-font-size);
+  }
+
+  .transaction {
+    &-title {
+      font-size: var(--xl-font-size);
+    }
+  
+    &-back {
+      position: absolute;
+      left: 20px;
+      width: 50px;
+      height: 50px;
+      background: url(../../images/arrow-back.svg);
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: 35px;
+      border: none;
+      border-radius: 25px;
+      outline: none;
+      box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.1);
+      cursor: pointer;
+    }
+  
+    &-fee {
+      margin-top: 25px;
+      color: var(--dark-color);
+      font-size: var(--sm-font-size);
+      text-align: center;
+  
+      & > span {
+        color: var(--hints-color);
+      }
+    }
+  
+    &-wrapper {
+      position: relative;
+      width: 90vw;
+      max-width: 560px;
+      margin: 0 auto;
+      margin-top: 15px;
+      padding: 20px;
+      background-color: var(--modal-bg-color);
+      border-radius: 4px;
+  
+      &.open {
+        display: block;
+      }
+  
+      &.closed {
+        display: none;
+      }
+    }
+  
+    &-field {
+      height: auto;
+      min-height: 100px;
+      max-height: 200px;
+      padding-top: 5px;
+
+      &.balance {
+        height: 150px;
+      }
+    }
   }
 }
