--- a/src/components/Transaction/Transaction.scss
+++ b/src/components/Transaction/Transaction.scss
@@ -155,6 +155,7 @@
     padding-left: 0;
     color: var(--dark-color);
     font-size: var(--xxxl-font-size);
+    background-color: var(--transparent);
     border: none;
     outline: none;
 
