--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -54,13 +54,17 @@
     justify-content: space-between;
     width: 100%;
     max-width: 60px;
-    height: 30px;
+    height: 35px;
     color: var(--dark-color);
     background-color: var(--modal-bg-color);
     border: none;
-    border-radius: 13px;
+    border-radius: 18px;
     outline: none;
     cursor: pointer;
+
+    &:hover {
+      background-color: var(--copyblock-color)
+    }
 
     & > img {
       width: 25px;
@@ -69,9 +73,10 @@
 
     & > p {
       display: none;
-      max-width: 60px;
+      max-width: 160px;
       margin: 0;
       overflow: hidden;
+      font-size: var(--md-font-size);
       white-space: nowrap;
       text-overflow: ellipsis;
     }
@@ -81,7 +86,7 @@
 @media screen and (min-width: 760px) {
   .menu {
     &-wallet {
-      max-width: 160px;
+      max-width: 220px;
 
       & > p {
         display: inline-block;
@@ -89,7 +94,7 @@
     }
 
     &-route {
-      margin-top: 10px;
+      margin-top: 8px;
       font-size: var(--md-font-size);
 
       &-wrapper {
